[package]
name = "cargo-external-doc"
version = "0.2.0"
authors = ["Geoffroy Couprie <geo.couprie@gmail.com>"]
description = "add long text articles to your crate's documentation"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Geal/cargo-external-doc"
keywords = ["documentation", "markdown"]

[dependencies]
handlebars = "0.22"
serde_json = "0.8"
tempfile   = "2.1.4"
walkdir    = "2.2.9"
